* GITHUB#12333: NumericLeafComparator#competitiveIterator makes better use of a "search after" value when paginating.
  (Chaitanya Gohel)

* GITHUB#12290: Make memory fence in ByteBufferGuard explicit using `VarHandle.fullFence()`

* GITHUB#12320: Add "direct to binary" option for DaciukMihovAutomatonBuilder and use it in TermInSetQuery#visit.
  (Greg Miller)

Optimizations
---------------------

* GITHUB#12270 Don't generate stacktrace in CollectionTerminatedException. (Armin Braun)

* GITHUB#12160: Concurrent rewrite for AbstractKnnVectorQuery. (Kaival Parikh)

* GITHUB#12286 Toposort use iterator to avoid stackoverflow. (Tang Donghai)

* GITHUB#12235: Optimize HNSW diversity calculation. (Patrick Zhai)

* GITHUB#12328: Optimize ConjunctionDISI.createConjunction (Armin Braun)

* GITHUB#12357: Better paging when doing backwards random reads.  This speeds up
  queries relying on terms in NIOFSDirectory and SimpleFSDirectory. (Alan Woodward)

* GITHUB#12339: Optimize part of duplicate calculation numDeletesToMerge in merge phase (fudongying)

Bug Fixes
---------------------

* GITHUB#12291: Skip blank lines from stopwords list. (Jerry Chin)

* GITHUB#11350: Handle possible differences in FieldInfo when merging indices created with Lucene 8.x (Tomás Fernández Löbbe)

* GITHUB#12352: [Tessellator] Improve the checks that validate the diagonal between two polygon nodes so
  the resulting polygons are valid counter clockwise polygons. (Ignacio Vera)

* LUCENE-10181: Restrict GraphTokenStreamFiniteStrings#articulationPointsRecurse recursion depth. (Chris Fournier)

Other
---------------------
(No changes)

======================== Lucene 9.6.0 =======================

API Changes
---------------------

* GITHUB#12116: Introduce IndexableField#storedValue() to expose the value that
  should be stored to IndexingChain without needing to guess the field's type.
  (Adrien Grand, Robert Muir)
